--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ section {
 article {
   width: 300px;
   height: 300px;
-  background: aqua;
+  background: hotpink;
 }
 
 /*# sourceMappingURL=style.css.map */
